# kamino-py

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  publish.yml
api/: index.html
docs/: api.md  index.md
examples/: async_quickstart.py  quickstart.py
search/: search_index.json
src/kamino/: __init__.py  client.py  exceptions.py  models.py
tests/: test_async_client.py  test_client.py  test_integration.py  test_models.py
