[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kamino-py"
version = "0.1.0"
description = "Typed Python client for the Kamino Finance public API (Solana DeFi: lending markets, reserves, vaults, metrics)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Robert Ruben" }]
keywords = ["kamino", "solana", "defi", "lending", "vaults", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.5",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/robertruben98/kamino-py"
Repository = "https://github.com/robertruben98/kamino-py"
Documentation = "https://docs.kamino.finance"
Issues = "https://github.com/robertruben98/kamino-py/issues"
Changelog = "https://github.com/robertruben98/kamino-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/kamino"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kamino",
    "tests",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live network tests against the real Kamino API (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
# UP007/UP045 force PEP 604 (X | None) which breaks runtime under Python 3.9.
ignore = ["UP007", "UP045"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true
